force-app/main/default/objects/Worklog__c/Worklog__c.object-meta.xml
<CustomObject>
    <label>Worklog</label>
    <nameField>
        <displayFormat>WN-{00000}</displayFormat>
        <label>Worklog Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Worklog</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>