force-app/main/default/objects/Worklog__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Worklog</relationshipLabel>
    <relationshipName>Worklog</relationshipName>
    <type>Lookup</type>
</CustomField>