force-app/main/default/objects/Worklog__c/fields/Drag_Related_List_Index__c.field-meta.xml
<CustomField>
    <fullName>Drag_Related_List_Index__c</fullName>
    <label>Drag Related List Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>