force-app/main/default/objects/Worklog__c/fields/Log_Detail__c.field-meta.xml
<CustomField>
    <fullName>Log_Detail__c</fullName>
    <label>Log Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>