force-app/main/default/objects/Worklog__c/listViews/Recent_Worklog.listView-meta.xml
<ListView>
    <fullName>Recent_Worklog</fullName>
    <columns>Date__c</columns>
    <columns>Type__c</columns>
    <columns>Summary__c</columns>
    <columns>NAME</columns>
    <columns>Drag_Table_Index__c</columns>
    <filterScope>Everything</filterScope>
    <label>Recent Worklog</label>
</ListView>